PA_Education/TestMenifest/force-app/main/default/objects/ApprovalRelateList__c/ApprovalRelateList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Use ApprovalRelateList 
page name : ApprovalRelatedListController_cls</description>
    <label>ApprovalRelateList</label>
</CustomObject>