PA_Education/TestMenifest/force-app/main/default/objects/ApprovalRelateList__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>