PA_Education/TestMenifest/force-app/main/default/objects/ApprovalRelateList__c/fields/RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedObject__c</fullName>
    <label>RelatedObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>