PA_Education/TestMenifest/force-app/main/default/objects/ApprovalRelateList__c/fields/RelateObjectIcon__c.field-meta.xml
<CustomField>
    <fullName>RelateObjectIcon__c</fullName>
    <label>RelateObjectIcon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>